[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/cucumber_example",
  "crates/tests",
  "crates/macros",
  "crates/linkedlist",
  "crates/error_handling",
  "crates/iterator",
  "crates/heap",
  "crates/coinchange",
  "crates/binary_tree",
  "crates/first_missing_positive"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
